# hpbex

./: LICENSE  Makefile  README.md  ext_meta.cpp  ext_meta.h  extensions.proto  extensions_option.cpp  extensions_option.h  flatmsg_gen.h  main.cpp  mysql_gen.cpp  mysql_gen.h  pbmain.cpp  test.cpp  test.proto  test_ext.cpp
examples/: Makefile
examples/cpp/: comm.hpb.h  db.hpb.h  mm.hpb.h  test.cpp
examples/dcagent/: CMakeLists.txt  Makefile  README.md  automake.sh  cmake_conf.py
examples/dcagent/base/: CMakeLists.txt  app.hpp  blocking_queue.hpp  cmdline_opt.cpp  cmdline_opt.h  dcshm.cpp  dcshm.h  dcsmq.cpp  dcsmq.h  dctcp.cpp  dctcp.h  dcutils.cpp  dcutils.hpp  logger.cpp  logger.h  msg_buffer.hpp  msg_proto.hpp  profile.cpp  profile.h  stdinc.h
examples/dcagent/tools/cmaketools/: README.md  generate.py
examples/dcagent/tools/cmaketools/templates/: cmake_conf_demo.py  exe.txt  lib.txt  root.txt
examples/dcagent/utility/: CMakeLists.txt  util_mysql.cpp  util_mysql.h  util_proto.cpp  util_proto.h
examples/proto/: Makefile  comm.pb.cc  comm.pb.h  comm.proto  cs.pb.cc  cs.pb.h  cs.proto  db.pb.cc  db.pb.h  db.proto  extensions.pb.cc  extensions.pb.h  extensions.proto  mm.pb.cc  mm.pb.h  mm.proto  test  test.cpp  test.pb.cc  test.pb.h  test.proto
examples/sql/: test.cpp  test.hpb.h
